feat(admin): implement user management (#22)
