# api/gen/models/admin_full_user_list.go
@@ -1,0 +1,99 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// AdminFullUserList admin full user list
+//
+// swagger:model AdminFullUserList
+type AdminFullUserList struct {
+
+	// Общее количетсво пользователей.
+	// Required: true
+	Total *int64 `json:"total"`
+
+	// items
+	// Required: true
+	Items []*AdminFullUser `json:"items"`
+}
+
+// Validate validates this admin full user list
+func (m *AdminFullUserList) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateTotal(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateItems(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *AdminFullUserList) validateTotal(formats strfmt.Registry) error {
+
+	if err := validate.Required("total", "body", m.Total); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *AdminFullUserList) validateItems(formats strfmt.Registry) error {
+
+	if err := validate.Required("items", "body", m.Items); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Items); i++ {
+		if swag.IsZero(m.Items[i]) { // not required
+			continue
+		}
+
+		if m.Items[i] != nil {
+			if err := m.Items[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("items" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AdminFullUserList) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AdminFullUserList) UnmarshalBinary(b []byte) error {
+	var res AdminFullUserList
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
