# api/gen/restapi/operations/admin/admin_get_users_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package admin
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bots-house/birzzha/api/gen/models"
+)
+
+// AdminGetUsersOKCode is the HTTP code returned for type AdminGetUsersOK
+const AdminGetUsersOKCode int = 200
+
+/*AdminGetUsersOK OK
+
+swagger:response adminGetUsersOK
+*/
+type AdminGetUsersOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.AdminFullUserList `json:"body,omitempty"`
+}
+
+// NewAdminGetUsersOK creates AdminGetUsersOK with default headers values
+func NewAdminGetUsersOK() *AdminGetUsersOK {
+
+	return &AdminGetUsersOK{}
+}
+
+// WithPayload adds the payload to the admin get users o k response
+func (o *AdminGetUsersOK) WithPayload(payload *models.AdminFullUserList) *AdminGetUsersOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the admin get users o k response
+func (o *AdminGetUsersOK) SetPayload(payload *models.AdminFullUserList) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AdminGetUsersOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// AdminGetUsersBadRequestCode is the HTTP code returned for type AdminGetUsersBadRequest
+const AdminGetUsersBadRequestCode int = 400
+
+/*AdminGetUsersBadRequest Bad Request
+
+swagger:response adminGetUsersBadRequest
+*/
+type AdminGetUsersBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewAdminGetUsersBadRequest creates AdminGetUsersBadRequest with default headers values
+func NewAdminGetUsersBadRequest() *AdminGetUsersBadRequest {
+
+	return &AdminGetUsersBadRequest{}
+}
+
+// WithPayload adds the payload to the admin get users bad request response
+func (o *AdminGetUsersBadRequest) WithPayload(payload *models.Error) *AdminGetUsersBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the admin get users bad request response
+func (o *AdminGetUsersBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AdminGetUsersBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// AdminGetUsersInternalServerErrorCode is the HTTP code returned for type AdminGetUsersInternalServerError
+const AdminGetUsersInternalServerErrorCode int = 500
+
+/*AdminGetUsersInternalServerError Internal Server Error
+
+swagger:response adminGetUsersInternalServerError
+*/
+type AdminGetUsersInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewAdminGetUsersInternalServerError creates AdminGetUsersInternalServerError with default headers values
+func NewAdminGetUsersInternalServerError() *AdminGetUsersInternalServerError {
+
+	return &AdminGetUsersInternalServerError{}
+}
+
+// WithPayload adds the payload to the admin get users internal server error response
+func (o *AdminGetUsersInternalServerError) WithPayload(payload *models.Error) *AdminGetUsersInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the admin get users internal server error response
+func (o *AdminGetUsersInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *AdminGetUsersInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
